--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSCE 190 | Project Management 2</title>
+  <title>CSCE 190 | Problem Statement</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -55,6 +55,15 @@
       display: block;
       margin-bottom: 0.75rem;
     }
+
+    .project a {
+      color: inherit;
+      text-decoration: none;
+    }
+
+    .project a:hover h3 {
+      text-decoration: underline;
+    }
   </style>
 </head>
 <body>
@@ -63,7 +72,6 @@
 
     <section class="team">
       <h2>Team Members</h2>
-      <p>Individual project (no team members).</p>
       <ul>
         <li>Emma Roberts</li>
       </ul>
@@ -72,10 +80,9 @@
     <h2>Highlighted Projects</h2>
 
     <div class="projects">
-      <!-- Problem Statement Assignment -->
       <section class="project">
         <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
-        <a href="files/statement.pdf"><img src="images/problem.png" alt="Problem Statement screenshot"></a>
+        <a href="files/statement.pdf"><img src="images/problem.png" alt="Problem statement screenshot"></a>
         <p>Students struggle to find and keep track of campus events because information is scattered across multiple platforms.</p>
       </section>
     </div>
