--- a/index.html
+++ b/index.html
@@ -3,89 +3,31 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>CSCE 190 | Problem Statement</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 2rem 1rem;
-      background: #f7f7f7;
-      color: #222;
-    }
-
-    main {
-      max-width: 960px;
-      margin: 0 auto;
-    }
-
-    h1 {
-      margin-top: 0;
-    }
-
-    .team {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 1rem;
-      margin-bottom: 1.25rem;
-    }
-
-    .projects {
-      display: grid;
-      gap: 1rem;
-    }
-
-    .project {
-      background: #fff;
-      border: 1px solid #ddd;
-      border-radius: 10px;
-      padding: 1rem;
-    }
-
-    .project h3 {
-      margin: 0 0 0.75rem;
-    }
-
-    .project img {
-      width: 100%;
-      max-width: 480px;
-      height: auto;
-      border-radius: 6px;
-      border: 1px solid #ccc;
-      display: block;
-      margin-bottom: 0.75rem;
-    }
-
-    .project a {
-      color: inherit;
-      text-decoration: none;
-    }
-
-    .project a:hover h3 {
-      text-decoration: underline;
-    }
-  </style>
+  <title>Emma Roberts | CSCE 190</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <main>
-    <h1>CSCE 190</h1>
-
-    <section class="team">
-      <h2>Team Members</h2>
-      <ul>
-        <li>Emma Roberts</li>
-      </ul>
+    <section class="intro">
+      <h2>Emma Roberts</h2>
+      <h1>CSCE 190: Computing in the Modern World</h1>
+      <p>
+        CSCE 190 introduces the software development process through teamwork, problem analysis,
+        prototyping, and communication. This site highlights assignment deliverables throughout the semester.
+      </p>
+      <p><a href="https://github.com/CSE-eroberts/eroberts.github.io-190">https://github.com/CSE-eroberts/eroberts.github.io-190</a></p>
     </section>
 
-    <h2>Highlighted Projects</h2>
-
-    <div class="projects">
-      <section class="project">
-        <a href="files/statement.pdf"><h3>Problem Statement</h3></a>
-        <a href="files/statement.pdf"><img src="images/problem.png" alt="Problem statement screenshot"></a>
-        <p>Students struggle to find and keep track of campus events because information is scattered across multiple platforms.</p>
-      </section>
-    </div>
+    <section class="assignments">
+      <h3>Assignments</h3>
+      <div class="cards">
+        <article class="card">
+          <a href="files/Problem Statement.pdf"><h4>Assignment 1 - Problem Statement</h4></a>
+          <a href="files/Problem Statement.pdf"><img src="images/problem1.png" alt="Problem statement screenshot"></a>
+          <p>Students struggle to find and track campus events when information is spread across multiple platforms.</p>
+        </article>
+      </div>
+    </section>
   </main>
 </body>
 </html>
